[tool.poetry]
name = "repro-task-destroyed"
version = "0.1.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
hypercorn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
